force-app/main/default/objects/Financial_Aid_Status__x/Financial_Aid_Status__x.object-meta.xml
<CustomObject>
    <description>Student Financial Aid Status by Aid Year</description>
    <externalDataSource>crm_student_profile_odata</externalDataSource>
    <externalName>PS_ASU_FA_PHASE</externalName>
    <label>Financial Aid Status (external)</label>
    <pluralLabel>Financial Aid Status (external)</pluralLabel>
</CustomObject>