force-app/main/default/objects/Financial_Aid_Status__x/fields/Aid_Year__c.field-meta.xml
<CustomField>
    <fullName>Aid_Year__c</fullName>
    <description>Financial Aid Award Year</description>
    <externalDeveloperName>AID_YEAR</externalDeveloperName>
    <label>Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>