force-app/main/default/objects/Financial_Aid_Status__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Related Contact</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>60</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Aid Status (external)</relationshipLabel>
    <relationshipName>Financial_Aid_Status</relationshipName>
    <type>IndirectLookup</type>
</CustomField>