force-app/main/default/objects/Financial_Aid_Status__x/fields/Financial_Aid_Phase__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Phase__c</fullName>
    <description>Financial Aid Award Phase</description>
    <externalDeveloperName>ASU_FA_PHASE</externalDeveloperName>
    <label>Financial Aid Phase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>