force-app/main/default/objects/Financial_Aid_Status__x/fields/Financial_Aid_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Status__c</fullName>
    <description>Financial Aid Award Status</description>
    <externalDeveloperName>DESCR</externalDeveloperName>
    <label>Financial Aid Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>